HTML .form tegs correction

--- a/index.html
+++ b/index.html
@@ -389,23 +389,23 @@
 
                         <!-- column -->
                         <div class="contacts__column">
-                            <div class="contacts__form">
-                            <form action="" class="form">
-                                <div class="form-input">
-                                    <span class="form-input__span">Ваш Email</span>
-                                    <input type="text" class="form-input__input">
+                            
+                            <form action="#" class="contact-form">
+                                <div class="form-item">
+                                    <span class="form-item__fake-placeholder">Ваш Email</span>
+                                    <input class="form-item__formfield" type="text">
                                 </div>
-                                <div class="form-input">
-                                    <span class="form-input__span">Сообщение</span>
-                                    <input type="text" class="form-input__input">
+                                <div class="form-item">
+                                    <span class="form-item__fake-placeholder">Сообщение</span>
+                                    <textarea class="form-item__formfield" name="message" id="#" cols="30" rows="10"></textarea>
                                 </div>
 
-                                <div class="form__button">
-                                    <button class="button button--accent">Отправить</button>
+                                <div class="form-item">
+                                    <input class="form__button" type="submit" value="Отправить"></input>
                                 </div>
+                                <div id="answer"></div>
                             </form>
 
-                            </div>
                             
                         </div>
                         <!--// column -->
