HTML .form teg name correction

--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@
                             
                             <form action="#" class="contact-form">
                                 <div class="form-item">
-                                    <span class="form-item__fake-placeholder">Ваш Email</span>
-                                    <input class="form-item__formfield" type="text">
+                                    <span class="fake-placeholder">Ваш Email</span>
+                                    <input class="form-input" type="text">
                                 </div>
                                 <div class="form-item">
-                                    <span class="form-item__fake-placeholder">Сообщение</span>
-                                    <textarea class="form-item__formfield" name="message" id="#" cols="30" rows="10"></textarea>
+                                    <span class="fake-placeholder">Сообщение</span>
+                                    <textarea class="form-input" name="message" id="#" cols="30" rows="10"></textarea>
                                 </div>
 
                                 <div class="form-item">
