CSS .form-input style

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                 </div>
 
                                 <div class="form-item">
-                                    <input class="form__button" type="submit" value="Отправить"></input>
+                                    <button class="button button--accent" type="submit">Отправить</button>
                                 </div>
                                 <div id="answer"></div>
                             </form>
