--- a/index.html
+++ b/index.html
@@ -516,8 +516,8 @@
           <div class="contacts__column">
             <form action="#" class="contact-form">
               <div class="form-item">
-                <input class="form-input" type="text" required />
-                <span class="fake-placeholder">Ваш Email</span>
+                  <input class="form-input" type="text" required />
+                  <span class="fake-placeholder">Ваш Email</span>
               </div>
               <div class="form-item">
                 <textarea
@@ -532,9 +532,7 @@
               </div>
 
               <div class="form-item">
-                <button class="button button--accent" type="submit">
-                  Отправить
-                </button>
+                <input type="submit" class="button button--accent" value="Отправить">
               </div>
               <div id="answer"></div>
             </form>
