HTML/CSS/JS .fake-placeholder move correction

--- a/index.html
+++ b/index.html
@@ -516,10 +516,11 @@
           <div class="contacts__column">
             <form action="#" class="contact-form">
               <div class="form-item">
+                  <span class="fake-placeholder fake-placeholder--active">Ваш Email</span>
                   <input class="form-input" type="text" required />
-                  <span class="fake-placeholder">Ваш Email</span>
               </div>
               <div class="form-item">
+                <span class="fake-placeholder">Сообщение</span>
                 <textarea
                   class="form-input"
                   name="message"
@@ -528,13 +529,11 @@
                   rows="10"
                   required
                 ></textarea>
-                <span class="fake-placeholder">Сообщение</span>
               </div>
 
               <div class="form-item">
                 <input type="submit" class="button button--accent" value="Отправить">
               </div>
-              <div id="answer"></div>
             </form>
           </div>
           <!--// column -->
