JS animation timing correction

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <!--// banner -->
 
       <!-- about -->
-      <div class="header-about" id="about" data-aos="fade-up">
+      <div class="header-about" id="about" data-aos="fade-up" data-aos-duration="1000">
         <div class="container">
           <div class="header-about__content">
             <!-- column -->
@@ -381,7 +381,7 @@
           <!--  wrapper -->
           <div class="timeline-wrapper">
             <!-- item -->
-            <div class="timeline-item" data-aos="fade-left">
+            <div class="timeline-item" data-aos="fade-left" data-aos-duration="800">
               <div class="timeline-item__title grad-border">Оцениваю макет</div>
               <p>Оцениваю объем работы, сложность, нюансы. Задаю вопросы.</p>
               <strong>Время: 2 часа</strong>
@@ -389,7 +389,7 @@
             <!--// item -->
 
             <!-- item -->
-            <div class="timeline-item" data-aos="fade-right">
+            <div class="timeline-item" data-aos="fade-right" data-aos-duration="800">
               <div class="timeline-item__title grad-border">
                 ТЗ, смета и график работ
               </div>
@@ -402,7 +402,7 @@
             <!--// item -->
 
             <!-- item -->
-            <div class="timeline-item" data-aos="fade-left">
+            <div class="timeline-item" data-aos="fade-left" data-aos-duration="800">
               <div class="timeline-item__title grad-border">
                 Вы держите руку на пульсе
               </div>
@@ -414,7 +414,7 @@
             <!--// item -->
 
             <!-- item -->
-            <div class="timeline-item" data-aos="fade-right">
+            <div class="timeline-item" data-aos="fade-right" data-aos-duration="800">
               <div class="timeline-item__title grad-border">
                 Выполняю каждый этап
               </div>
@@ -426,7 +426,7 @@
             <!--// item -->
 
             <!-- item -->
-            <div class="timeline-item" data-aos="fade-left">
+            <div class="timeline-item" data-aos="fade-left" data-aos-duration="800">
               <div class="timeline-item__title grad-border">
                 Финальное ревью проекта
               </div>
@@ -515,7 +515,7 @@
 
           <!-- column -->
           <div class="contacts__column">
-            <form action="#" class="contact-form" data-aos="fade-left">
+            <form action="#" class="contact-form" data-aos="fade-left" data-aos-duration="2200">
               <div class="form-item">
                 <span class="fake-placeholder fake-placeholder--active"
                   >Ваш Email</span
