CSS .portfolio__img :hovver style correction

--- a/index.html
+++ b/index.html
@@ -287,7 +287,9 @@
             >
               <div class="portfolio-card__img">
                 <img src="./img/portfolio/img-01.jpg" alt="project preview" />
+                <span>Смотреть проект</span>
               </div>
+
               <div class="portfolio-card__text">
                 <h3 class="portfolio-card__title">Верстка “Форест тревел”</h3>
                 <p class="portfolio-card__desc">
@@ -517,7 +519,7 @@
           <div class="contacts__column">
             <form action="#" class="contact-form" data-aos="fade-left" data-aos-duration="2200">
               <div class="form-item">
-                <span class="fake-placeholder fake-placeholder--active"
+                <span class="fake-placeholder"
                   >Ваш Email</span
                 >
                 <input class="form-input" type="text" required />
