HTML/CSS/JS .backtop-btn style and script

--- a/index.html
+++ b/index.html
@@ -495,13 +495,13 @@
 
           <!-- column -->
           <div class="contacts__column">
-            <form action="#" class="contact-form" data-aos="fade-left" data-aos-duration="2200">
+
+            <form action="#" class="contact-form">
               <div class="form-item">
-                <span class="fake-placeholder"
-                  >Ваш Email</span
-                >
+                <span class="fake-placeholder">Ваш Email</span>
                 <input class="form-input" type="text" required />
               </div>
+
               <div class="form-item">
                 <span class="fake-placeholder">Сообщение</span>
                 <textarea
@@ -548,6 +548,11 @@
         </div>
       </div>
     </footer>
+
+    <!-- backtop -->
+    <a href="#top" class="backtop-btn" id="backtop">
+        <img src="./img/arrow-up.svg" alt="Наверх">
+    </a>
 
     <!-- libs -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
