SCSS file changes, HTML user data updated

--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
 
             <!-- text -->
             <div class="header-intro__text">
+
+              <!-- header -->
               <div class="header-intro__title">
-                <h1 class="title grad-border">Юрий Ключевский</h1>
+                <h1 class="title grad-border">Балашова Наталья</h1>
               </div>
+              <!--// header -->
 
               <div class="header-intro__desc">
                 <p>
@@ -242,9 +245,7 @@
                 </ul>
               </div>
 
-              <a href="mailto:ifrance@yandex.ru" class="link"
-                >yurij.kluchevsky@gmail.com</a
-              >
+              <a href="mailto:ifrance@yandex.ru" class="link">ifrance@yandex.ru</a>
             </div>
             <!--// column -->
           </div>
@@ -435,8 +436,8 @@
               </p>
             </div>
             <ul class="contacts__list">
-              <li><span>Email</span><a class="link" href="mailto:yurij.kluchevsky@gmail.com">yurij.kluchevsky@gmail.com</a></li>
-              <li><span>Телефон</span><a class="link" href="tel:7980234567">+7 (980) 123-45-67</a></li>
+              <li><span>Email</span><a class="link" href="mailto:ifrance@yandex.ru">ifrance@yandex.ru</a></li>
+              <li><span>Телефон</span><a class="link" href="tel:7980234567">+7 (925) 826-07-41</a></li>
             </ul>
             <ul class="socials">
                 <!-- li -->
@@ -534,7 +535,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__copyright">
-          <p class="footer__date">&copy; 2021 &mdash; Юрий Ключевский</p>
+          <p class="footer__date">&copy; 2024 &mdash; Балашова Наталья</p>
 
           <div class="footer__text">
             <p>
