--- a/index.html
+++ b/index.html
@@ -19,20 +19,18 @@
     <!-- Open Graph -->
     <!-- <meta property="og:url" content="https://webcademy.ru/" /> -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Портфолио Юрий Ключевский">
+    <meta property="og:title" content="Портфолио Балашова Наталья">
     <meta property="og:description" content="Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ."/>
     <meta property="og:image" content="./img/opengraph.jpg">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png"/>
-    <link rel="manifest" href="./img/favicon/site.webmanifest" />
-    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#1a60cf"/>
-    <link rel="shortcut icon" href="./img/favicon/favicon.ico" />
-    <meta name="msapplication-TileColor" content="#00aba9" />
-    <meta name="msapplication-config" content="./img/favicon/browserconfig.xml"/>
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <header class="header-top">
@@ -46,8 +44,9 @@
             <span class="nav-icon__middle"></span>
           </div>
 
-          <!--===== Мобильная навигация =====-->
+          <!--=====  Мобильная навигация  =====-->
           <div class="nav-mobile">
+
             <!-- Wrapper -->
             <div class="nav-mobile__content">
               <nav class="nav" id="mobile-nav">
@@ -101,18 +100,16 @@
                   </li>
                 </ul>
                 <!--// list -->
-                <a href="mailto:yurij.kluchevsky@gmail.com" class="link">yurij.kluchevsky@gmail.com</a>
+                <a href="mailto:ifrance@yandex.ru" class="link">ifrance@yandex.ru</a>
               </div>
             </div>
             <!--// Wrapper -->
+
           </div>
           <!--=====// Мобильная навигация =====-->
 
           <div class="header-top__social">
-            <a
-              href="https://www.linkedin.com/in/natasha-balashova-98853376/"
-              target="_blank"
-            >
+            <a href="https://www.linkedin.com/in/natasha-balashova-98853376/" target="_blank">
               <svg class="svg-ln">
                 <use href="./img/socials/svgSprite.svg#svg-ln"></use>
               </svg>
@@ -504,7 +501,7 @@
               <!-- form item -->
               <div class="form-item" data-aos="fade-left" data-aos-duration="700">
                 <span class="fake-placeholder">Ваш Email</span>
-                <input class="form-input" type="text" name="email" type="email"/>
+                <input class="form-input" name="email" type="email"/>
               </div>
               <!--// form item -->
 
