CSS input autocomplete style

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta name="keywords" content="Портфолио, верстальщик, веб-разработчик, создание сайта, оперативная верстка">
 
     <!-- Styles -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <!-- Open Graph -->
     <!-- <meta property="og:url" content="https://webcademy.ru/" /> -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Портфолио Балашова Наталья">
-    <meta property="og:description" content="Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ."/>
+    <meta property="og:description" content="Верстальщик сайтов, веб-разработчик. Оперативная верстка. Работаю с соблюдением сроков и выполнением ТЗ.">
     <meta property="og:image" content="./img/opengraph.jpg">
 
     <!-- Favicons -->
@@ -501,7 +501,7 @@
               <!-- form item -->
               <div class="form-item" data-aos="fade-left" data-aos-duration="700">
                 <span class="fake-placeholder">Ваш Email</span>
-                <input class="form-input" name="email" type="email"/>
+                <input class="form-input" name="email" type="email">
               </div>
               <!--// form item -->
 
@@ -514,7 +514,7 @@
 
               <!-- form item -->
               <div class="form-item">
-                <input type="submit" class="button button--accent" value="Отправить"/>
+                <input type="submit" class="button button--accent" value="Отправить">
               </div>
               <!--// form item -->
             </form>
