CSS vars colors correction

--- a/index.html
+++ b/index.html
@@ -499,21 +499,21 @@
               </div>
 
               <!-- form item -->
-              <div class="form-item" data-aos="fade-left" data-aos-duration="700">
+              <div class="contact-form__item" data-aos="fade-left" data-aos-duration="700">
                 <span class="fake-placeholder">Ваш Email</span>
                 <input class="form-input" name="email" type="email">
               </div>
               <!--// form item -->
 
               <!-- form item -->
-              <div class="form-item" data-aos="fade-left" data-aos-duration="700">
+              <div class="contact-form__item" data-aos="fade-left" data-aos-duration="700">
                 <span class="fake-placeholder">Сообщение</span>
                 <textarea class="form-input" name="message" id="#" cols="30" rows="10"></textarea>
               </div>
               <!--// form item -->
 
               <!-- form item -->
-              <div class="form-item">
+              <div class="contact-form__item">
                 <input type="submit" class="button button--accent" value="Отправить">
               </div>
               <!--// form item -->
