CSS teg name correction, opengraph update

--- a/index.html
+++ b/index.html
@@ -254,9 +254,12 @@
     <section class="portfolio" id="portfolio">
       <div class="container">
         <div class="portfolio__content">
+
+            <!-- header -->
             <div class="portfolio__title">
                 <h2 class="section-title grad-border">Портфолио</h2>
             </div>
+            <!--// header -->
 
             <!-- mix block -->
             <div class="mix-block">
@@ -353,6 +356,7 @@
     <section class="timeline" id="timeline">
       <div class="container">
         <div class="timeline__content">
+
             <!-- header -->
             <div class="timeline__header">
             <h2 class="section-title grad-border">Как я работаю</h2>
