IMG graphic optimization

--- a/index.html
+++ b/index.html
@@ -554,12 +554,13 @@
       </div>
     </footer>
 
-    <!-- backtop -->
+    <!-- backtop button -->
     <a href="#top" class="backtop-btn" id="backtop">
         <img src="./img/arrow-up.svg" alt="Наверх">
     </a>
+    <!--// backtop -->
 
-    <!--*** libs ***-->
+    <!--**** libs ****-->
     <!-- библиотка jQuery  -->
     <script src="./libs/jquery/jquery-3.7.1.min.js"></script>
 
@@ -575,8 +576,7 @@
     <!-- галерея fancybox -->
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 
-    <!--*** Custom JS ***-->
+    <!--**** Custom JS ****-->
     <script src="./js/main.js"></script>
-
   </body>
 </html>
