CSS section contacts position of quots correction

--- a/index.html
+++ b/index.html
@@ -500,10 +500,6 @@
 
             <!-- form -->
             <form action="#" class="contact-form">
-              <div class="contact-form__img">
-                    <img src="./img/contacts/figure-dots.svg" alt="figure">
-                    <img src="./img/contacts/figure.svg" alt="figure-move" class="move-quot">
-              </div>
 
               <!-- form item -->
               <div class="contact-form__item" data-aos="fade-left" data-aos-duration="700">
@@ -526,10 +522,17 @@
               <!--// form item -->
             </form>
             <!--// form -->
+            
+            <!-- quot img -->
+            <div class="contacts__img">
+                <img src="./img/contacts/figure-dots.png" alt="figure">
+                <img src="./img/contacts/figure.svg" alt="figure-move" class="move-quot">
+            </div>
+            <!--// quot img -->
 
             <div id="answer"></div>
-          </div>
-          <!--// column -->
+            </div>
+        <!--// column -->
 
         </div>
 
