HTML  contact-form AOS animation correct

--- a/index.html
+++ b/index.html
@@ -499,17 +499,17 @@
           <div class="contacts__column">
 
             <!-- form -->
-            <form action="#" class="contact-form">
+            <form action="#" class="contact-form" data-aos="fade-left" data-aos-duration="1500">
 
               <!-- form item -->
-              <div class="contact-form__item" data-aos="fade-left" data-aos-duration="700">
+              <div class="contact-form__item">
                 <span class="fake-placeholder">Ваш Email</span>
                 <input class="form-input" name="email" type="email">
               </div>
               <!--// form item -->
 
               <!-- form item -->
-              <div class="contact-form__item" data-aos="fade-left" data-aos-duration="700">
+              <div class="contact-form__item">
                 <span class="fake-placeholder">Сообщение</span>
                 <textarea class="form-input" name="message" id="#" cols="30" rows="10"></textarea>
               </div>
