HTML/JS mixitup sccript disable and fb icon hide

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <!-- <li>
                     <a href="https://www.facebook.com/" target="_blank">
                       <svg class="svg-fb">
                         <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                       </svg>
                     </a>
-                  </li>
+                  </li> -->
                   <li>
                     <a href="https://instagram.com/nattyme/" target="_blank">
                       <object
@@ -219,13 +219,13 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <!-- <li>
                     <a href="https://www.facebook.com/" target="_blank">
                       <svg class="svg-fb">
                         <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                       </svg>
                     </a>
-                  </li>
+                  </li> -->
                   <li>
                     <a href="https://instagram.com/nattyme/" target="_blank">
                       <object
@@ -461,13 +461,13 @@
               </li>
               <!--// li -->
               <!-- li -->
-              <li>
+              <!-- <li>
                 <a href="https://www.facebook.com/" target="_blank">
                   <svg class="svg-fb">
                     <use href="./img/socials/svgSprite.svg#svg-fb"></use>
                   </svg>
                 </a>
-              </li>
+              </li> -->
               <!--// li -->
 
               <!-- li -->
@@ -574,7 +574,7 @@
     <script src="./libs/jquery-validate/jquery.validate.min.js"></script>
 
     <!-- mixItUp -->
-    <script src="./libs/mixItUp/mixitup.min.js"></script>
+    <!-- <script src="./libs/mixItUp/mixitup.min.js"></script> -->
 
     <!-- анимации AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
