HTML projects categories hide

--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
             <div class="mix-block">
 
                 <!-- controls -->
-                <div class="mix-block__controls">
+                <!-- <div class="mix-block__controls">
                     <button class="mix-block__btn" type="button" data-filter = "all" >Все работы</button>
                     <button class="mix-block__btn" type="button" data-filter = ".html" >HTML верстка</button>
                     <button class="mix-block__btn" type="button" data-filter = ".wp" >WordPress</button>
-                </div>
+                </div> -->
                 <!--// controls -->
 
                 <!-- cards wrapper -->
