--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://vk.com/natashabalashova" target="_blank">
+                    <a href="https://vk.com/natty_me" target="_blank">
                       <svg class="svg-vk">
                         <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                       </svg>
@@ -213,7 +213,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://vk.com/natashabalashova" target="_blank">
+                    <a href="https://vk.com/natty_me" target="_blank">
                       <svg class="svg-vk">
                         <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                       </svg>
@@ -453,7 +453,7 @@
               <!--// li -->
               <!-- li -->
               <li>
-                <a href="https://vk.com/natashabalashova" target="_blank">
+                <a href="https://vk.com/natty_me" target="_blank">
                   <svg class="svg-vk">
                     <use href="./img/socials/svgSprite.svg#svg-vk"></use>
                   </svg>
